[workspace]
members = [ 'utils', 'day_01', 'day_02', 'day_03', 'day_04', 'day_05', 'day_06', 'day_07' ]

[workspace.dependencies]
anyhow = "1.0.66"
tracing = "0.1"
tracing-subscriber = "0.3.16"
ansi_term = "0.12.1"
thiserror = "1.0.37"
im = "15.1.0"
regex = "1.7.0"
once_cell = "1.16"
itertools = "0.10.5"
len-trait = "0.6.1"