[package]
name = "day_03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
utils = { path = "../utils" }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
len-trait = "0.6.1"