[package]
name = "day_04"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
utils = { path = "../utils" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }