[package]
name = "day_06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
utils = { path = "../utils" }
itertools = { workspace = true }
im = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = "0.1"