[package]
name = "day_07"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
utils = { path = "../utils" }
itertools = { workspace = true }
im = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = "0.1"