[package]
name = "day_08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
utils = { path = "../utils" }
len-trait = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }
num = "0.4.0"