[package]
name = "day_12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-test = {workspace = true }
tracing-subscriber = { workspace = true }
im = { workspace = true }
anyhow = { workspace = true }
utils = { path = "../utils" }