[package]
name = "day_15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
utils = { path = "../utils" }
once_cell = { workspace = true }
regex = { workspace = true }
im = { workspace = true }
itertools = { workspace = true }